# ocr_ss

./: .gitignore  README.md  capture.py  pyproject.toml  viewer.py  viewer.py.bak
ocr_ss/: capture.py  ocr.py
