[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr-ss"
version = "0.1.0"
description = "Wayland screenshot OCR tool"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "PyGObject",
]

[project.scripts]
ocr-ss = "ocr_ss.capture:main"
